--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">TG_Patient_Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile">Profile</string>
+    <string name="notifications">Notifications</string>
+    <string name="collection">Collection</string>
+    <string name="inbox">Inbox</string>
+    <string name="new_user">New User</string>
+    <string name="support">Support</string>
+    <string name="about">About</string>
+    <string name="others">Others</string>
+    <string name="verified">Verified</string>
 </resources>
