Removed hardcoded strings from 21 files and commited these to strings.xml. 1 hour 45 mins taken so far.
Created function onHealthDataClick in PatientDashboardActivity as it was returning errors without it's existence.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,168 @@
     <string name="confirm_incident_text"> ·   Lying in an unsual place. \n \n ·   Resembling sleeping behaviour in an unusual time \n \n      ·   <b>Usual bedtime</b>: 10:30pm - 6:30am \n \n      ·   <b>Recorder bedtime</b>: 10:30pm - 6:30am \n \n ·   No movement detected over 15 minutes</string>
     <string name="confirm_incident_verified_by"><b>Incident verified by:</b> <font fgcolor="#FF0B98C5"> Georgia Blakeney</font></string>
     <string name="false_alert_verified_by"><b>False alert verified by:</b> <font fgcolor="#FF0B98C5"> Georgia Blakeney</font></string>
+    <string name="add_new_patient">Add new patient</string>
+    <string name="name">Name</string>
+    <string name="address">Address</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="phone">Phone</string>
+    <string name="under_care_of">Under Care of</string>
+    <string name="photo">Photo</string>
+    <string name="save">Save</string>
+    <string name="back">Back</string>
+    <string name="todo">TODO</string>
+    <string name="health_details">Health Details</string>
+    <string name="care_plan">Care Plan</string>
+    <string name="_1_care_plan_type">1.Care Plan Type:</string>
+    <string name="home">Home</string>
+    <string name="hospital">Hospital</string>
+    <string name="_2_nutrition_and_hydration">2.Nutrition and Hydration:</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="na">NA</string>
+    <string name="_3_support_requirements">3.Support requirements:</string>
+    <string name="bathroom">Bathroom</string>
+    <string name="activities">Activities</string>
+    <string name="walking">Walking</string>
+    <string name="self_care">Self-care</string>
+    <string name="shopping">Shopping</string>
+    <string name="_4_diet_timings">4.Diet timings:</string>
+    <string name="breakfast_8am">Breakfast – 8am</string>
+    <string name="lunch_12pm">Lunch – 12pm</string>
+    <string name="supper_6pm">Supper – 6pm</string>
+    <string name="_5_drink_likes">5.Drink Likes:</string>
+    <string name="coffee">Coffee</string>
+    <string name="water">Water</string>
+    <string name="tea">Tea</string>
+    <string name="_6_sleep_pattern">6.Sleep pattern:</string>
+    <string name="_10pm_6am">10pm - 6am</string>
+    <string name="_8pm_4pm">8pm - 4pm</string>
+    <string name="_11pm_7am">11pm - 7am</string>
+    <string name="_7_pain">7.Pain:</string>
+    <string name="chronic">Chronic</string>
+    <string name="massage_required">Massage required</string>
+    <string name="heat_pack">Heat Pack</string>
+    <string name="pillow_support">Pillow Support</string>
+    <string name="_8_pain_score_recording_required_the_higher_the_number_the_more_painful_it_is">8. Pain score recording required (The higher the number, the more painful it is)</string>
+    <string name="_1">1</string>
+    <string name="_2">2</string>
+    <string name="_3">3</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
+    <string name="_10">10</string>
+    <string name="_9_behaviour_management">9.Behaviour management:</string>
+    <string name="doll_therapy">Doll therapy</string>
+    <string name="pet_therapy">Pet therapy</string>
+    <string name="dementia_management">Dementia management</string>
+    <string name="lights_on_bedroom">Lights on bedroom</string>
+    <string name="lights_on_bathroom">Lights on bathroom</string>
+    <string name="submit">Submit</string>
+    <string name="care_plan_summary">Care Plan Summary</string>
+    <string name="summary">Summary</string>
+    <string name="care_plan_type">Care Plan Type:</string>
+    <string name="loading_data_from_database">Loading data from database...</string>
+    <string name="nutrition_and_hydration">Nutrition and Hydration:</string>
+    <string name="support_requirements">Support requirements:</string>
+    <string name="bath_toilets">Bath/Toilets</string>
+    <string name="diet_timings">Diet timings:</string>
+    <string name="drink_likes">Drink Likes:</string>
+    <string name="sleep_pattern">Sleep pattern:</string>
+    <string name="_8pm_4am">8PM - 4AM</string>
+    <string name="pain">Pain:</string>
+    <string name="pain_score">Pain Score</string>
+    <string name="behavioural_management">Behavioural Management</string>
+    <string name="test_notifications">Test: Notifications</string>
+    <string name="test_health_data">TEST: health data</string>
+    <string name="select_a_patient">Select a Patient</string>
+    <string name="caretaker_profile">Caretaker Profile</string>
+    <string name="_3501_80315_1">3501 80315 1</string>
+    <string name="marilyn_bvarton">Marilyn Bvarton</string>
+    <string name="_6_5_1980">6/5/1980</string>
+    <string name="_31_solaris_drive_melbourne_vic_2767_australia">31 Solaris drive, Melbourne, VIC, 2767, Australia</string>
+    <string name="phone_number">Phone number</string>
+    <string name="_0399_832_791">0399-832-791</string>
+    <string name="working_at">Working at</string>
+    <string name="st_vincent_s_public_hospital_melbourne">St. Vincent\'s Public Hospital Melbourne</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="confirm_incident">Confirm Incident</string>
+    <string name="alert">! Alert</string>
+    <string name="recorded_time_09_49_am">Recorded time: 09:49 AM</string>
+    <string name="benjamin_hogan_is_seemingly_unconscious">Benjamin Hogan is seemingly unconscious</string>
+    <string name="verification_time_09_49_am">Verification time: 09:49 AM</string>
+    <string name="quick_message">Quick Message</string>
+    <string name="provide_a_manual_input">Provide a Manual Input</string>
+    <string name="add_your_input_here">Add your input here..</string>
+    <string name="cancel">Cancel</string>
+    <string name="detected_09_49_am">Detected : 09:49 AM</string>
+    <string name="vertification_time_12_39_pm">Vertification time: 12:39 pm</string>
+    <string name="patient_is_unconscious_and_bleeding_from_head">Patient is unconscious and bleeding from head</string>
+    <string name="estimated_time_30_minutes">Estimated time : 30 minutes</string>
+    <string name="call_ambulance">Call Ambulance</string>
+    <string name="patient_daily_report">Patient Daily Report</string>
+    <string name="reported_by">Reported By</string>
+    <string name="report_date">Report date</string>
+    <string name="today">today</string>
+    <string name="progress_notes">Progress Notes</string>
+    <string name="patient_normal_daily_visit">Patient normal, daily visit...</string>
+    <string name="alert_word">Alert</string>
+    <string name="urgent_medical_attention">Urgent Medical Attention</string>
+    <string name="requires_hospitalisation">Requires Hospitalisation</string>
+    <string name="not_applicable">Not Applicable</string>
+    <string name="requires_hourly_attention">Requires hourly attention</string>
+    <string name="submit_caps">SUBMIT</string>
+    <string name="patient_x_daily_report">Patient X Daily Report</string>
+    <string name="current_status">Current Status</string>
+    <string name="exclamation">!</string>
+    <string name="patient_benjamin_hogan">Patient : Benjamin Hogan</string>
+    <string name="no_movement_detected_over_15_minutes">· No movement detected over 15 minutes</string>
+    <string name="usual_naptime_1_30pm_2_20pm">· Usual naptime: 1:30pm - 2:20pm</string>
+    <string name="detected">Detected</string>
+    <string name="lying_in_an_unsual_place">· Lying in an unsual place.</string>
+    <string name="resembling_sleeping_behaviour_in_an_unusual_time">· Resembling sleeping behaviour in an unusual time</string>
+    <string name="usual_bedtime_10_30pm_6_30am">· Usual bedtime: 10:30pm - 6:30am</string>
+    <string name="provide_feedback">Provide Feedback</string>
+    <string name="enter_your_feedback">Enter your feedback...</string>
+    <string name="submit_feedback">Submit Feedback</string>
+    <string name="new_patient">New Patient</string>
+    <string name="daily_report">Daily Report</string>
+    <string name="patient_list">Patient List</string>
+    <string name="settings">Settings</string>
+    <string name="enter_password">Enter password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="email">Email</string>
+    <string name="caretaker">Caretaker</string>
+    <string name="company_admin">Company Admin</string>
+    <string name="login_as">Login as:</string>
+    <string name="welcome">Welcome</string>
+    <string name="get_started">Get started</string>
+    <string name="logout">Logout</string>
+    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
+    <string name="welcome_to_patient_checker">Welcome to Patient checker</string>
+    <string name="admin">Admin</string>
+    <string name="medical_diagnostics">Medical Diagnostics</string>
+    <string name="patient_name">Patient name</string>
+    <string name="patient_patient_name">Patient **patient_name**</string>
+    <string name="test_medical_diagnostics">Test: Medical Diagnostics</string>
+    <string name="test_side_menu">Test: Side Menu</string>
+    <string name="patients_overview">Patients Overview</string>
+    <string name="patient_profile">Patient Profile</string>
+    <string name="first_name">First name</string>
+    <string name="marilyn">Marilyn</string>
+    <string name="middle_name">Middle Name</string>
+    <string name="none">None</string>
+    <string name="last_name">Last Name</string>
+    <string name="bvarton">Bvarton</string>
+    <string name="medicare_no">Medicare no</string>
+    <string name="_5065521796">5065521796</string>
+    <string name="western_affairs_no">Western Affairs no</string>
+    <string name="l67m8ob004hq">L67M8OB004HQ</string>
+    <string name="more_info">More info</string>
 
     <string-array name="hospital_list_array">
         <item>Royal Melbourne Hospital</item>
