--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -204,6 +204,117 @@
     <string name="western_affairs_no">Western Affairs no</string>
     <string name="l67m8ob004hq">L67M8OB004HQ</string>
     <string name="more_info">More info</string>
+    <string name="textview">TextView</string>
+    <string name="last_updated_02_12_2022_5_20_pm">Last Updated: 02/12/2022 5:20 pm</string>
+    <string name="enter_email_address">Enter email address</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="create_account">Create Account</string>
+    <string name="back_to_login">Back to Login</string>
+    <string name="already_registered_login_here">Already Registered ? Login Here</string>
+    <string name="account_creation">Account Creation</string>
+    <string name="theme_mode">Theme Mode</string>
+    <string name="change">Change</string>
+    <string name="app_update">App Update</string>
+    <string name="feedback">Feedback</string>
+    <string name="standing">Standing</string>
+    <string name="naverage_walking_time_hours_per_day_1_5_nmost_walked_in_a_day_hours_2_5_nleast_walked_in_a_day_hours_0_25_naverage_walking_speed_5_km_hr_nmaximum_walking_speed_10_km_hr_n">\nAverage walking time (hours per day): 1.5 \nMost walked in a day (hours): 2.5 \nLeast walked in a day (hours): 0.25 \nAverage walking speed: 5 km/hr \nMaximum walking speed: 10 km/hr\n</string>
+    <string name="suggestion">Suggestion</string>
+    <string name="if_you_have_already_checked_up_on_the_patient_guardian_requests_your_input_on_this_situation">If you have already checked up on the patient, Guardian requests your input on this situation</string>
+    <string name="add_image">Add Image</string>
+    <string name="crop_image">Crop Image</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="select_from_gallery">Select from gallery</string>
+    <string name="patient_details">Patient details</string>
+    <string name="marilyn_bvaton">Marilyn Bvaton</string>
+    <string name="blood_pressure">Blood Pressure</string>
+    <string name="normal">Normal</string>
+    <string name="patient_temperature">Patient Temperature</string>
+    <string name="glucose_level">Glucose Level</string>
+    <string name="high">High</string>
+    <string name="o2_saturation">O2 Saturation</string>
+    <string name="pulse_rate">Pulse Rate</string>
+    <string name="respiration_rate">Respiration Rate</string>
+    <string name="bloodfat_level">Bloodfat Level</string>
+    <string name="johnny">Johnny</string>
+    <string name="smiths">Smiths</string>
+    <string name="clinic_address">Clinic Address</string>
+    <string name="_61_399_832_791">+61 399 832 791</string>
+    <string name="sample_gmail_com">sample@gmail.com</string>
+    <string name="fax">Fax</string>
+    <string name="_336_555_2222">336-555-2222</string>
+    <string name="new_patient_details">New patient details</string>
+    <string name="next_to_kin">Next to Kin</string>
+    <string name="next_to_kin_plus">Next to Kin+</string>
+    <string name="gp">Gp</string>
+    <string name="gpplus">Gp+</string>
+    <string name="first_name_asterisk">First name*</string>
+    <string name="enter_a_first_name">Enter a first name</string>
+    <string name="enter_a_middle_name">Enter a middle name</string>
+    <string name="last_name_askerisk">Last Name*</string>
+    <string name="enter_a_last_name">Enter a last name</string>
+    <string name="clinic_address_asterisk">Clinic Address*</string>
+    <string name="enter_clinic_address">Enter clinic address</string>
+    <string name="phone_number_asterisk">Phone Number*</string>
+    <string name="eg_1234_56789_0">eg: 1234 56789 0</string>
+    <string name="enter_a_fax">Enter a fax</string>
+    <string name="prev">Prev</string>
+    <string name="age_cared_planning_region_code">Age-cared planning region code</string>
+    <string name="age_cared_planning_region_name">Age-cared planning region name</string>
+    <string name="activities_of_daily_living">Activities of daily living</string>
+    <string name="admission_type">Admission type</string>
+    <string name="age_group">Age group</string>
+    <string name="beh">BEH</string>
+    <string name="care_type">Care type</string>
+    <string name="complex_health_care_score">Complex health care score</string>
+    <string name="country_of_birth">Country of birth</string>
+    <string name="reason_for_departure">Reason for departure</string>
+    <string name="reason_for_discharge">Reason for discharge</string>
+    <string name="first_admission">First admission</string>
+    <string name="homecare_level">Homecare level</string>
+    <string name="indigenious_status">Indigenious status</string>
+    <string name="length_of_stay_days">Length of stay (Days)</string>
+    <string name="length_of_stay_months">Length of stay (Months)</string>
+    <string name="mmm_code">MMM code</string>
+    <string name="operational_places">Operational places</string>
+    <string name="operational_type">Operational type</string>
+    <string name="preferred_language">Preferred language</string>
+    <string name="program_type">Program type</string>
+    <string name="remoteness">Remoteness</string>
+    <string name="sex">Sex</string>
+    <string name="service_size">Service size</string>
+    <string name="state">State</string>
+    <string name="year">Year</string>
+    <string name="enter_search_address">Enter/Search Address</string>
+    <string name="_61_412_345_678">+61 412 345 678</string>
+    <string name="someone_example_com">someone@example.com</string>
+    <string name="address_asterisk">Address*</string>
+    <string name="date_of_birth_asterisk">Date of Birth*</string>
+    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
+    <string name="medicare_no_asterisk">Medicare no*</string>
+    <string name="eg_l123456789012">Eg. L123456789012</string>
+    <string name="benjamin_hogan_status">Benjamin Hogan (Status: )</string>
+    <string name="ok">OK</string>
+    <string name="sara_marlay_status">Sara Marlay (Status: )</string>
+    <string name="danial_hobart_status">Danial Hobart(Status: )</string>
+    <string name="last_updated_05_05_2022_12_39_pm">Last Updated : 05/05/2022, 12:39 pm</string>
+    <string name="last_15_days">Last 15 Days</string>
+    <string name="abigail_lindeman_status">Abigail Lindeman ( Status: )</string>
+    <string name="needs_follow_up">Needs follow up</string>
+    <string name="false_alert_noted_and_benjamin_s_activity_profile_has_been_updated_n_n_all_admins_have_been_notified">False Alert Noted And Benjamin\'s Activity Profile Has Been Updated \n \n All admins have been notified.</string>
+    <string name="false_alert_confirmed">False Alert Confirmed!</string>
+    <string name="user">User</string>
+    <string name="address_colon">Address:</string>
+    <string name="date_of_birth_colon">Date of Birth:</string>
+    <string name="phone_colon">Phone:</string>
+    <string name="under_care">Under Care:</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="requires_medical_attention_test_test">Requires Medical Attention Test Test</string>
+    <string name="week_1_patient_s_response">Week 1: Patient\'s Response</string>
+    <string name="standing_at_unusual_spot_near_window_for_longer_than_2_5_hour_s_4_times_this_week_patient_responded_just_staring_outside">Standing at unusual spot (near window) for longer than 2.5 hour(s), 4 times this week. Patient responded “Just staring outside.”</string>
+    <string name="search">Search</string>
+    <string name="update">Update</string>
+    <string name="enter_an_email_adress">Enter an email adress</string>
 
     <string-array name="hospital_list_array">
         <item>Royal Melbourne Hospital</item>
