changed settings page theme mode option to a switch, modified 3 files (settings.java, activity_setting.xml, and strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,7 +216,7 @@
     <string name="back_to_login">Back to Login</string>
     <string name="already_registered_login_here">Already Registered ? Login Here</string>
     <string name="account_creation">Account Creation</string>
-    <string name="theme_mode">Theme Mode</string>
+    <string name="night_mode">Night Mode</string>
     <string name="change">Change</string>
     <string name="app_update">App Update</string>
     <string name="feedback">Feedback</string>
