--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,6 @@
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
-    <string name="previous">Previous</string>
     <string name="choose_diff_patient">&lt; Choose a Different Patient</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
@@ -341,6 +340,11 @@
     <string name="validation_password_short">Password Must Be Longer than 6 Characters</string>
     <string name="text_reset_password">Reset Password</string>
     <string name="text_enter_your_email_to_received_reset_link">Enter Your Email To Received Reset Link.</string>
+    <string name="validation_error_passwords_do_not_match">Passwords do not match</string>
+    <string name="validation_empty_confirmed_password">Password confirmation must not be empty</string>
+    <string name="previous">previous</string>
+    <string name="registration_success">Verification Email Has been Sent</string>
+    <string name="registration_failure">Registration Failed</string>
 
     <string-array name="hospital_list_array">
         <item>Royal Melbourne Hospital</item>
