--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="verified">Verified</string>
     <string name="welcome_caretaker">Welcome, Caretaker</string>
     <string name="welcome_admin">Welcome, Administrator</string>
+    <string name="welcome_nurse">Welcome, Nurse</string>
 
 
     <!-- Below are all strings previously hardcoded added here using the quick function -->
@@ -341,6 +342,7 @@
     <string name="validation_password_short">Password Must Be Longer than 6 Characters</string>
     <string name="text_reset_password">Reset Password</string>
     <string name="text_enter_your_email_to_received_reset_link">Enter Your Email To Received Reset Link.</string>
+    <string name="tasks_label">Tasks</string>
 
     <string-array name="hospital_list_array">
         <item>Royal Melbourne Hospital</item>
