add Jetpack compose dependencies, Activity etc.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -543,5 +543,6 @@
         <item>2027</item>
         <item>2028</item>
     </string-array>
+    <string name="title_activity_add_heart_rate">AddHeartRate</string>
 </resources>
 
