--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -548,5 +548,6 @@
     <string name="heart_rate_date_and_time">Date and Time</string>
     <string name="heart_rate_hint">Heart Rate</string>
     <string name="add_heart_rate_title">Add Heart Rate Data</string>
+    <string name="heart_rate_button_name">Heart Rate</string>
 </resources>
 
