Made requested changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,6 +353,7 @@
     <string name="login_email_not_verified">User email has not been verified</string>
     <string name="add_task">Add Task</string>
     <string name="task_list">Task List</string>
+    <string name="saving_changes">Saving Changes?</string>
 
     <string-array name="hospital_list_array">
         <item>Royal Melbourne Hospital</item>
