--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -554,5 +554,8 @@
     <string name="heart_rate_hint">Heart Rate</string>
     <string name="add_heart_rate_title">Add Heart Rate Data</string>
     <string name="heart_rate_button_name">Heart Rate</string>
+    <string name="log_out">LOG OUT</string>
+    <string name="ward">Ward</string>
+    <string name="caretaker_profile_edit">Caretaker Profile Edit</string>
 </resources>
 
