--- a/AI Guardian/Docs/classifier-T12024.ipynb
+++ b/AI Guardian/Docs/classifier-T12024.ipynb
@@ -5,7 +5,7 @@
    "id": "9cecc902-af68-404f-b201-fb336f6e61ca",
    "metadata": {},
    "source": [
-    "# SVM CLASSIFIER\n",
+    "# DL FOR HAR USING WI-FI CSI \n",
     "#### JESSICA ROA - S219604321"
    ]
   },
