Achini Uththara - created a Nurse Roster UI in the admin page. Created a Nurse Roster button. When clicked it will redirect to Nurse roster page.
Trello card: https://trello.com/c/LmJS4gzh/74-admin-roster-view
Test video: https://deakin.au.panopto.com/Panopto/Pages/Viewer.aspx?id=97c5733f-8802-4d3b-ad54-b14e00901d1c

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,6 +355,7 @@
     <string name="add_task">Add Task</string>
     <string name="task_list">Task List</string>
     <string name="saving_changes">Saving Changes?</string>
+    <string name="nurse_roster">Nurse Roster</string>
 
     <string-array name="hospital_list_array">
         <item>Royal Melbourne Hospital</item>
