--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -344,7 +344,7 @@
     <string name="validation_empty_password">Password is Required.</string>
     <string name="validation_password_weak">Please use a stronger password</string>
     <string name="text_reset_password">Reset Password</string>
-    <string name="text_enter_your_email_to_received_reset_link">Enter Your Email To Received Reset Link.</string>
+    <string name="text_enter_your_email_to_received_reset_link">Make Sure Do not Use Old Password to Create a New Password \n Other Wise Login not Accepted. \n Link Send To Your Email for Reset Password.</string>
     <string name="tasks_label">Tasks</string>
     <string name="validation_error_passwords_do_not_match">Passwords do not match</string>
     <string name="validation_empty_confirmed_password">Password confirmation must not be empty</string>
