--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -560,5 +560,9 @@
     <string name="caretaker_profile_edit">Caretaker Profile Edit</string>
     <string name="navigation_drawer_open">Drawer Open</string>
     <string name="navigation_drawer_close">Drawer Closed</string>
+    <string name="task_description_prefix">Task Description:</string>
+    <string name="assigned_nurse_prefix">Assigned Nurse:</string>
+    <string name="priority_prefix">Priority:</string>
+    <string name="task_details_title">Task Details</string>
 </resources>
 
