--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,7 +118,7 @@
     <string name="diet_timings">Diet timings:</string>
     <string name="drink_likes">Drink Likes:</string>
     <string name="sleep_pattern">Sleep pattern:</string>
-    <string name="_8pm_4am">8PM - 4AM</string>
+    <string name="_8pm_4am">8pm - 4am</string>
     <string name="pain">Pain:</string>
     <string name="pain_score">Pain Score</string>
     <string name="behavioural_management">Behavioural Management</string>
@@ -559,5 +559,6 @@
     <string name="log_out">LOG OUT</string>
     <string name="ward">Ward</string>
     <string name="caretaker_profile_edit">Caretaker Profile Edit</string>
+    <string name="addEdit_carePlan">Add/Edit Care Plan</string>
 </resources>
 
